# eudr-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  db.py  main.py  templating.py
app/data/: cn_codes.py  country_risk.py
app/geo/: __init__.py  parse.py  schemas.py  validate.py
app/models/: __init__.py  alert.py  base.py  client.py  dds.py  document.py  enums.py  evidence.py  outreach.py  plot.py  plot_check.py  shipment.py  supplier.py
app/routers/: __init__.py  _forms.py  clients.py  dashboard.py  dds.py  plot_checker.py  scope.py  shipments.py  suppliers.py
app/services/: __init__.py  dds_assembly.py  dds_pdf.py  pdf.py  risk.py  scope.py  serialization.py  whisp.py
app/templates/: _dds_error.html  _plot_email_ok.html  _plot_error.html  _plot_result.html  _scope_error.html  _scope_result.html  base.html  client_detail.html  clients.html  dashboard.html  dds_detail.html  dds_list.html  dds_pdf.html  index.html  plot_checker.html  scope_checker.html  shipment_detail.html  supplier_detail.html
docs/: traces-dds-mapping.md  whisp-integration.md
migrations/: README  env.py
migrations/versions/: 80b46fc60469_initial_schema.py
tests/: conftest.py  test_clients.py  test_dashboard.py  test_dds_api.py  test_dds_assembly.py  test_geo_parse.py  test_geo_validate.py  test_health.py  test_models.py  test_pdf.py  test_plot_checker.py  test_risk.py  test_scope.py  test_scope_api.py  test_shipments.py  test_suppliers.py  test_whisp.py
